<resources>
    <string name="app_name">Nézzük!</string>
    <string name="username">Felhasználónév</string>
    <string name="email">E-mail</string>
    <string name="password">Jelszó</string>
    <string name="login_button">Bejelentkezés</string>
    <string name="register_button">Regisztráció</string>
    <string name="login_page_name">Bejelentkezés</string>
    <string name="register_page_name">Regisztráció</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="google_login_button">Bejelentkezés Google fiókkal</string>
    <string name="anon_login_button">Bejelentkezés vendégként</string>
    <string name="login_failed">Bejelentkezés sikertelen!</string>
    <string name="failed_registration">Sikertelen regisztráció! :c</string>
    <string name="successful_registration">Sikeres regisztráció!</string>
    <string name="passwords_do_not_match">A jelszavak nem egyeznek!</string>
    <string name="item_placeholder">Betöltés...</string>
    <string name="to_cart">Kosárba</string>
    <string name="search">Keresés</string>
    <string name="cart">Kosár</string>
    <string name="logout">Kijelentkezés</string>
    <string name="money">%d Ft</string>
    <string name="location_icon_description">Hely ikon</string>
    <string name="cart_page_name">Kosár</string>
    <string name="add_more_to_cart">+</string>
    <string name="remove_from_cart">-</string>
    <string name="no_tickets_err">Nincs több jegy erre az előadásra!</string>
    <string name="ticket_stat">Jelenleg %d olcsó jegyünk van!</string>
    <string name="notification_channel_description">Nézzük! legfrissebb hírei</string>
    <string name="notif_body">Ne felejtsd el befejezni a vásárlást!</string>
    <string name="notif_title">Még maradtak dolgok a kosaradban!</string>
</resources>